@@ -23,7 +23,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.149 2005/02/05 07:57:09 tom_kelly33 Exp $
+# $Id: hwdetect.in,v 1.150 2005/02/14 06:56:35 tom_kelly33 Exp $
 #
 
 use strict;
@@ -552,6 +552,12 @@ sub hwdetect_getsata() {
 	my $total = 0;
 	my $res = "";
 
+	# Return if noscsi
+	if (defined($cmdline{noscsi})) {
+		print getStr('skip_sata');
+		print_success();
+		return
+	}
 	my @satalist = qw(libata sd_mod ata_piix scsi_mod sr_mod sg a100u2w 
 		advansys aha152x aha1542 aic7xxx BusLogic fdomain gdth 
 		megaraid sata_promise sata_sil sata_svw sata_via sata_vsc);
@@ -1247,7 +1253,7 @@ sub hwdetect_getdisks() {
 
 # write the disk stuff
 sub hwdetect_writedisks() {
-	print "\n hwdetect_writedisks \n";
+	print "\n  hwdetect_writedisks \n";
 	unless ($probe) {
 		print getStr('disk_write') . ":\n";
 		# get persistent partitions and set their mountpoints,
