@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.45 2005/02/12 18:45:52 tom_kelly33 Exp $
+# $Id: rc.sysinit.in,v 1.46 2005/02/14 06:56:35 tom_kelly33 Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -413,17 +413,17 @@ setupinit() {
 	# perform hwdetect if not disabled
 	if [ `/bin/grep -iqv hwdetect=no /proc/cmdline` -a  `/bin/grep -iqv nodetect /proc/cmdline` ]; then
 		if [ -e /initrd/usr/sbin/hwdetect ]; then
-			echo "  -- Starting hwdetect ----------------"
+			echo "-- rc.sysinit: Starting hwdetect -----------"
 			OLDPATH=$PATH
 			export PATH=/sbin:/usr/sbin:/bin:/usr/bin
 			/initrd/usr/sbin/hwdetect
 			export PATH=$OLDPATH
-			echo "  -- Done with hwdetect ---------------"
+			echo "-- rc.sysinit: Done with hwdetect ----------"
 		else
-			echo "  -- Missing hwdetect -----------------"
+			echo "-- rc.sysinit: Missing hwdetect ------------"
 		fi
 	else 
-		echo "  -- Skipping hwdetect ----------------"
+		echo "-- rc.sysinit: Skipping hwdetect -----------"
 	fi
 
 	# Don't run depmod (must be run before imaging system)
