@@ -1,6 +1,9 @@
-# $Id: CHANGELOG,v 1.138 2005/02/12 18:45:52 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.139 2005/02/14 06:56:35 tom_kelly33 Exp $
 
-* 2005-02-12
+* 2005-02-13
+	[linuxrc.in] added usb devices to search list
+	[hwdetect] if 'noscsi' => no SATA check
+	[mklivecd] psmouse.proto=imps - laptop fix from Texstar
 	[rc.sysinit.in] - unionfs - fix /var/tmp, thanks to Ikerek
 * 2005-02-07
 	[rc.sysinit.in] - updates to unionfs functionality
